Reconcile current branch

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <section class='home-screen'>
       <slide class='blue-marble-slide active'>
         <h1 class='headline-shade'></h1>
-        <h1 class='headline'>THE WORLD AT WAR</h1>
+        <h1 class='headline'>5-Player AI Battle Royale</h1>
       </slide>
       <slide class='welcome-slide'>
         <h1 class='overhead-banner'>WELCOME TO</h1>
